test/files/neg/nullary-override.check
nullary-override.scala:2: error: non-nullary method overrides nullary method
class B extends A { override def x(): Int = 4 }
                                 ^
one error found
